# stash

./: .gitmodules  README.md  flake.nix
deployments/flux/flux-system/: gotk-sync.yaml
deployments/services/: .env.local  .env.prod  .gitignore  docker-compose.yml  generate-prometheus-auth.py  global.env  local.env  prod.env  run.sh  secrets.local.env  secrets.prod.env.enc  secrets.prod.env.gpg
deployments/services/git/: docker-compose.yml  drone.stack.conf  gitea.env  gitea.stack.txt
deployments/services/grafana/: docker-compose.yml  grafana.stack.conf
deployments/services/info-service/: docker-compose.yml
deployments/services/prometheus/: docker-compose.yml  web.yml
deployments/services/traefik/: docker-compose.yml  traefik.stack.conf  traefik.yml
experiments/distributed-queue/: README.md
experiments/makeimmutableimage/: Dockerfile  build-image.sh  build.sh
experiments/rune/: Cargo.toml
experiments/rune/src/: main.rs
infra/docs/: mkdocs.yml
infra/docs/docs/: as207968.md  index.md  services-host.md  unimatrix-01.md
infra/hcloud-k3s-tofu/: .gitignore  kube.tf
infra/hetzner-k3s-tofu/unimatrix-01/: .terraform.lock.hcl  k3s_kubeconfig.yaml  k3s_kustomization_backup.yaml  kube.tf
infra/kube/cert-manager-clusterissuers/: Chart.yaml
infra/kube/unimatrix-01/: Chart.yaml  values.yaml
kube/apps/hello-world/: values.yaml
kube/infrastructure/cert-manager/: Chart.yaml  values.yaml
kube/infrastructure/cert-manager-letsencrypt/: Chart.yaml  issuer.yaml  namespace.yaml  values.yaml
kube/infrastructure/ingress-nginx/: values.yaml
kube/infrastructure/reflector/: Chart.yaml
nixfiles/: .editorconfig  README.md  backup.nix  common.nix  darwin-configuration.nix  default.nix  email.nix  flake.nix  git.nix  home.nix  neovim.nix  result  starship.nix  theme.nix  wg-mesh.nix  zsh.nix
nixfiles/desktop/: desktop.nix  develop.nix  gaming.nix  sway.nix
nixfiles/home/: README.md  email.nix  flake.nix  home.nix  sway.nix  theme.nix  update.sh
nixfiles/modules/: reverse-proxy.nix
nixfiles/programs/: alacritty.nix  git.nix  kitty.nix  neovim.lua  neovim.nix  neovim.vim  starship.nix  tmux.nix
nixfiles/secret/: authelia-hmac-secret.age  authelia-jwks.age  authelia-jwt-secret.age  authelia-session-secret.age  authelia-storage-secret.age  etebase-django-secret.age  garage-env.age  hedgedoc-env.age  letsencrypt-hetzner.age  libreddit-auth.age  mastodon-env.age  mqtt-monitor.age  mqtt-shelly-auth.age  mqtt-zigbee.age  murmur-env.age  nitter-auth.age  restic-backup-password.age  secrets.nix  smb-media.age  transmission.age  woodpecker-env.age
nixfiles/services/: authelia.nix  dns-nsd.nix  dns.nix  etesync.nix  gitea.nix  grafana.nix  haproxy.conf  hass.nix  headscale.nix  hedgedoc.nix  jellyfin.nix  kanidm.nix  libreddit.nix  loki.nix  mdns.nix  mosquitto.nix  mumble.nix  nitter.nix  owncast.nix  ports.nix  postgresql-backup.nix  prometheus.nix  quassel.nix  samba.nix  smb-media.nix  transmission.nix  vaultwarden.nix  web.nix
projects/benchmarks/aead-bench/: Cargo.toml
projects/benchmarks/aead-bench/src/: main.rs
projects/dsp/: .gitignore  Cargo.toml  flake.nix
projects/dsp/synthesizer/: .gitignore  Cargo.toml  README.md
projects/dsp/synthesizer/src/: audio_output.rs  display.rs  main.rs  source.rs
projects/dsp/ultrasonic_modulate/: Cargo.toml  README.md  flake.nix
projects/dsp/ultrasonic_modulate/src/: audio_io.rs  main.rs  window.rs
projects/fs/file-lock/: Cargo.toml  README.md
projects/fs/file-lock/src/: cli.rs  encoding.rs  lib.rs  main.rs
projects/fs/file-lock/src/encoding/: outer_header.rs
projects/web/color_generator/: Cargo.toml  README.md
projects/web/color_generator/src/: colors.rs  main.rs
registry/: inet.md  oid.md
system/: .dockerignore  container-shell.sh  install.sh
system/shell-dockerfiles/: debian.Dockerfile  ubuntu.Dockerfile
templates/: README.md
templates/rust-cli/: Cargo.toml  README.md  build.rs  default.nix  flake.nix
templates/rust-cli/completions/: _rust-cli-template  _rust-cli-template.ps1  rust-cli-template.bash  rust-cli-template.elv
templates/rust-cli/src/: cli.rs  main.rs
templates/rust-cli/tests/: cli.rs
templates/rust-rest-server/: .gitignore  Cargo.toml  default.nix  flake.nix
templates/rust-rest-server/completions/: _rust-cli-template  _rust-rest-server-template  _rust-rest-server-template.ps1  rust-cli-template.bash  rust-cli-template.fish  rust-rest-server-template.bash  rust-rest-server-template.elv  rust-rest-server-template.fish
templates/rust-rest-server/man/: rust-cli-template.1  rust-rest-server-template.1
templates/rust-rest-server/migrations/: 20230920172324_messages.sql
templates/rust-rest-server/src/: cli.rs  database.rs  main.rs  model.rs  routes.rs
templates/rust-rest-server/tests/: cli.rs
(+170 files in other folders)
