[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"
publish = false
authors = [ "Raphael Peters <rappet@rappet.de>" ]
description = "A CLI app template"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
