[package]
name = "rust-rest-server-template"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Raphael Peters <rappet@rappet.de>"]
description = "A REST server template"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", default-features = false, features = [
    "macros",
    "cookies",
] }
anyhow = "1.0.70"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
paperclip = { version = "0.8.0", features = ["actix4", "swagger-ui", "chrono"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "chrono"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.4"
tracing-subscriber = "0.3.17"

[profile.dev]
#opt-level = 2

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
