[package]
name = "aead-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.1"
aes-gcm-siv = "0.11.1"
aes-siv = "0.7.0"
argh = "0.1.10"
chacha20poly1305 = "0.10.1"
xsalsa20poly1305 = "0.9.0"

[profile.dev]
opt-level = 2
panic = "abort"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
strip = true
