[package]
name = "synthesizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atomic_float = "0.1.0"
cpal = "0.15.2"
minifb = "0.24.0"
spin = "0.9.8"

[dependencies.dsp_lib]
path = "../dsp_lib"
