[package]
name = "synthesizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atomic_float = "0.1.0"
cpal = { version = "0.15.2", default-features = false, features = [ "jack" ] }
minifb = "0.24.0"
spin = "0.9.8"
embedded-graphics = "0.8.0"

[dependencies.dsp_lib]
path = "../dsp_lib"
