[package]
name = "file-lock"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
categories = ["command-line-utilities"]
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
anyhow = "1.0.70"
argon2 = "0.5.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.2.4", features = ["derive"] }
getrandom = "0.2.9"
nom = "7.1.3"
password-hash = "0.5.0"
rpassword = "7.2.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
