[package]
name = "color_generator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
serde_json = "1.0.96"

[dependencies.palette]
version = "0.7.1"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.160"
features = ["derive"]

[profile.release]
lto = true
panic = 'abort'
strip = true
